--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <ul>
               <li>
                 <a href="">
-                  <span>Home</span>
+                  <span>home</span>
                   <i class="fa-solid fa-chevron-down"></i>
                 </a>
               </li>
@@ -96,6 +96,9 @@
                   <span>Contact Us</span>
                   <i class="fa-solid fa-chevron-down"></i>
                 </a>
+              </li>
+              <li style="display: none">
+                <a href="#top">top</a>
               </li>
             </ul>
             <div><button class="btn-grad">GET A QUOTE</button></div>
@@ -712,7 +715,9 @@
         </div>
       </footer>
     </section>
-
+    <a href="#top" class="scroll-to-top"
+      ><i class="fa-solid fa-arrow-up"></i
+    ></a>
     <!-- cdn wowjs -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"
