--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
         </div>
       </div>
     </section>
-    <section class="footer__container">
+    <!-- <section class="footer__container">
       <footer>
         <div class="footer__content">
           <div
@@ -714,7 +714,9 @@
           </div>
         </div>
       </footer>
-    </section>
+    </section> -->
+    <footer>day la footer</footer>
+
     <a href="#top" class="scroll-to-top"
       ><i class="fa-solid fa-arrow-up"></i
     ></a>
