footer by giang

--- a/index.html
+++ b/index.html
@@ -718,6 +718,7 @@
     <a href="#top" class="scroll-to-top"
       ><i class="fa-solid fa-arrow-up"></i
     ></a>
+    <footer>footer by giang</footer>
     <!-- cdn wowjs -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"
